--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -16,7 +16,7 @@ html,body {
     background-position: center;
     background-size: cover;
     width: 100%;
-    min-height: 924px;
+    height: 1040px;
 }
 .container {
     max-width: 1440px;
@@ -25,3 +25,4 @@ html,body {
 
 @import '../block/header';
 @import '../block/about';
+@import 'media';
