--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding: 43px 0;
+    padding: 43px 0 43px 0;
     &__wrapper {
         display: flex;
         align-items: center;
