--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -1,5 +1,5 @@
 .about {
-    padding: 43px 0;
+   
     &__wrapper {
         display: flex;
         justify-content: space-between;
@@ -22,6 +22,17 @@
     &__info {
         max-width: 768px;
         position: relative;
+        &-gdz {
+            font-family: Montserrat;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24.38px;
+            text-align: center;
+            max-width: 174px;
+            height: 24px;
+            color: #fff;
+            display: none;
+        }
         &-title {
             z-index: 5;
             max-width: 675px;
@@ -145,9 +156,15 @@
             }                
         }
     }
+    &__box {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
     &__item {
+        box-sizing: border-box;
         width: 343.44px;
-        min-height: 131.44px;
+        height: 131.44px;
         display: flex;
         gap: 8px;
         background: linear-gradient(90deg, #BE92FE 0%, #7732E1 100%);
@@ -180,6 +197,7 @@
             gap: 4px;
             border-radius: 11px;
             margin-top: 6px;
+            text-decoration: none;
             &--text {
                 font-family: Montserrat;
                 font-size: 12px;
@@ -189,6 +207,62 @@
                 text-align: left;
                 color: #fff;
             }
+        }
+    }
+    &__courses-name {
+        display: none;
+        max-width: 155px;
+        height: 13px;
+        font-family: Montserrat;
+        font-size: 19px;
+        font-weight: 600;
+        line-height: 23.16px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        color: #fff;
+    }
+    &__feedback {
+        position: relative;
+        &-questions {
+            position: relative;
+            &--text {
+                position: absolute;
+                width: 245px;
+                height: 24px;
+                font-family: Montserrat;
+                font-size: 20px;
+                font-weight: 700;
+                line-height: 24.38px;
+                text-align: center;
+                color: #fff;
+                top: 35%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+        &-elipse {
+            position: absolute;
+            top: 144px;
+            right: 0;
+            width: 275px;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        &-cat {
+            position: absolute;
+            top: 80px;
+            right: 30px;
+            width: 275px;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }        
         }
     }
 }
