--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -25,4 +25,7 @@ html,body {
 
 @import '../block/header';
 @import '../block/about';
+@import '../block/crystal';
+@import '../block/stories';
+@import '../block/setting';
 @import 'media';
