Осталось сделать ЛК и смену темы

--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -28,4 +28,9 @@ html,body {
 @import '../block/crystal';
 @import '../block/stories';
 @import '../block/setting';
+@import '../block/myoffice';
+@import '../block/friends';
+@import '../block/appraisal';
+@import '../block/conditions';
+@import '../block/policy';
 @import 'media';
