--- a/scss/block/_policy.scss
+++ b/scss/block/_policy.scss
@@ -1,37 +1,44 @@
-.popup__stories {
-    background: #0F0C15A8;
+.policy {
     position: fixed;
-    z-index: 22;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0F0C15A8;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
+    z-index: 28;
     opacity: 0;
-    transition: visibility .4s, opacity .4s;
-    &-box {
+    visibility: hidden;
+    transition: opacity .2s, visibility .2s;
+    &__box {
         background: #353130E8;
         width: 689px;
         height: 672px;
         border-radius: 32px;
         scale: 0;
-        transition: scale .6s;
+        transition: scale .2s;
+        position: relative;
     }
-    &-header {
+    &__header {
         background: #222021ED;
         display: flex;
         align-items: center;
         border-radius: 32px 32px 0 0;
         padding: 15.66px 0 15.66px 32.05px;
-        gap: 142.15px;
+        gap: 19.89px;
     }
-    &-back {
+    &__back {
         width: 90.56px;
         height: 48.61px;
         border-radius: 8px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            cursor: pointer;
+        }        
     }
-    &-title {
+    &__title {
         font-family: Montserrat;
         font-size: 32px;
         font-weight: 600;
@@ -39,11 +46,11 @@
         letter-spacing: -0.02em;
         text-align: left;
         color: #FAFAFA;
-    }
+    }      
     &.active {
         visibility: visible;
         opacity: 1;
-        .popup__stories-box {
+        .policy__box {
             scale: 1;
         }
     }
