--- a/scss/basic/_media.scss
+++ b/scss/basic/_media.scss
@@ -324,6 +324,254 @@
             }
         }
     }
+    .popup__stories {
+        &-box {
+            width: 500px;
+            height: 560px;
+        }
+        &-header {
+            gap: 76.15px;
+        }
+        &-back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-title {
+            font-size: 28px;
+        }
+    }
+    .popup__setting {
+        &-box {
+            width: 500px;
+            height: 560px;
+        }
+        &-header {
+            gap: 76.15px;
+        }
+        &-back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-title {
+            font-size: 28px;
+        }
+        &-item {
+            width: 409.47px;
+            height: 52.27px;
+        }
+        &-name {
+            font-size: 16px;
+        }
+        &-icon {
+            width: 25px;
+            height: 23px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    .popup__crystal {
+        &-box {
+            width: 500px;
+            height: 560px;
+        }
+        &-header {
+            gap: 76.15px;
+        }
+        &-img {
+            width: 100%;
+            height: 200px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-return {
+            width: 70px;
+            height: 40px;
+            top: 5px;
+            left: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-title {
+            font-size: 24px;
+        }
+        &-info {
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 24.38px;
+        }
+        &-lists {
+            margin-top: 5px;
+        }
+        &-icon {
+            width: 25px;
+            height: 23px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-buttons {
+            gap: 26px;
+        }
+        &-button {
+            width: 200.95px;
+            height: 45.38px;
+            border-radius: 9px;
+            font-family: Montserrat;
+            font-size: 13px;
+            font-weight: 600;
+            line-height: 15.85px;
+        }
+    }
+    .policy {
+        &__box {
+            width: 500px;
+            height: 560px;
+        }
+        &__header {
+            gap: 16px;
+        }
+        &__back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 28px;
+        }       
+    }
+    .conditions {
+        &__box {
+            width: 500px;
+            height: 560px;
+        }
+        &__header {
+            gap: 16px;
+        }
+        &__back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 28px;
+        }       
+    }
+    .appraisal {
+        &__box {
+            width: 500px;
+            height: 560px;
+        }
+        &__header {
+            gap: 16px;
+        }
+        &__back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 28px;
+        }    
+        &__rating {
+           gap: 25px;            
+        }
+        &__btn {
+            width: 230px;
+            font-size: 25px;
+        }
+        &__star {
+            width: 35px;
+            height: 35px;
+        }   
+    }
+    .friends {
+        &__box {
+            width: 500px;
+            height: 560px;
+        }
+        &__header {
+            gap: 16px;
+        }
+        &__back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 28px;
+        } 
+        &__form {
+            width: 460px;
+        }
+        &__input {
+            width: 460px;
+        }
+    }
+    .office {
+        &__box {
+            width: 500px;
+            height: 560px;
+        }
+        &__header {
+            gap: 16px;
+        }
+        &__back {
+            width: 70px;
+            height: 45px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 28px;
+        }
+        &__main {
+            &-icon {
+                width: 92.89px;
+                height: 92.89px;
+            }
+        }
+        &__input {
+            width: 340.86px;
+            height: 50.11px;
+            font-size: 18px;
+        }
+        &__btn {
+            width: 280px;
+            height: 50px;
+            margin-top: 28px;
+        }
+    }
 }
 @media(max-width: 556px) {
     .container {
@@ -377,6 +625,339 @@
         &__center {
             justify-content: flex-start;
             align-items: flex-start
+        }
+        &__photo {
+            font-size: 10px;
+            font-weight: 500;
+            line-height: 12.19px;      
+        }
+    }
+    .popup__stories {
+        &-box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &-header {
+            border-radius: 0;
+            gap: 76.15px;
+        }
+        &-back {
+            width: 40px;
+            height: 25px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-title {
+            font-size: 18px;
+        }
+    }
+    .popup__setting {
+        &-box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &-header {
+            border-radius: 0;
+            gap: 76.15px;
+        }
+        &-back {
+            width: 40px;
+            height: 25px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-title {
+            font-size: 18px;
+        }
+        &-box {
+            background: #353130;  
+                  
+        }
+        &-main {
+            padding: 0 19.3px;
+            margin-top: 27.44px;    
+        }
+       
+        &-item {
+            width: 321.4px;
+            height: 43.77px;  
+            &--last {
+                border-radius: 0;
+            } 
+            &--color {
+                display: flex;
+            }
+        }
+        &-name {
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 15.85px;
+            letter-spacing: -0.02em;
+            text-align: left;
+        }
+        &-icon {
+            width: 25px;
+            height: 23px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    .popup__crystal {
+        &-trait {
+            display: block;
+        }
+        &-box {
+            width: 360px;
+            height: 435px;
+            border-radius: 0;
+            margin-top: 7px;
+            padding: 0;
+        }
+        &-title {
+            margin-top: 6px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 19.5px;
+        }
+        &-info {
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 15.85px;
+        }
+        &-buttons {
+            margin-top: 30px;
+            gap: 25px;
+        }   
+        &-button {
+            padding: 7px 6px;
+            width: 136.95px;
+            height: 45.38px;
+            border-radius: 9px;
+            opacity: 0px;
+        }
+       &-return {
+        display: none;
+       }
+    }
+    .policy {
+        &__box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &__header {
+            border-radius: 0;
+            gap: 10px;
+            padding: 20px 15px;
+        }
+        &__back {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 21.94px;
+            letter-spacing: -0.02em;
+        }
+    }
+    .conditions {
+        &__box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &__header {
+            border-radius: 0;
+            gap: 23px;
+            padding: 20px 35px;
+        }
+        &__back {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 21.94px;
+            letter-spacing: -0.02em;
+        }
+    }
+    .appraisal {
+        &__box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &__header {
+            border-radius: 0;
+            gap: 66px;
+            padding: 20px 35px;
+        }
+        &__back {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;
+            text-align: left;
+            
+        }
+        &__rating {
+           gap: 25px;            
+        }
+        &__btn {
+            width: 172px;
+            font-size: 42px;
+            font-family: Montserrat;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;
+        }
+        &__star {
+            width: 35px;
+            height: 35px;
+        }   
+    }
+    .friends {
+        &__box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &__header {
+            border-radius: 0;
+            gap: 10px;
+            padding: 20px 15px;
+        }
+        &__back {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 21.94px;
+            letter-spacing: -0.02em;
+        }
+        &__form {
+            width: 360px;
+        }
+        &__input {
+            width: 334.55px;
+            height: 41.11px;
+            border-radius: 25px;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;            
+        }
+        &__btn {
+            width: 172.32px;
+            height: 41.11px;
+            border-radius: 25px;
+            opacity: 0px;
+            font-family: Montserrat;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;
+            text-align: left;
+
+        }
+    }
+    .office {
+        &__box {
+            width: 360px;
+            height: 100vh;
+            background: #353130;
+            border-radius: 0;
+        }
+        &__header {
+            border-radius: 0;
+            gap: 66px;
+            padding: 20px 35px;
+        }
+        &__back {
+            width: 20px;
+            height: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__title {
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;
+            text-align: left;            
+        }
+        &__main {
+            &-icon {
+                width: 79.7px;
+                height: 81.56px;
+            }
+        }
+        &__input {
+            width: 267.45px;
+            height: 44.06px;
+            border-radius: 21px;            
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;
+        }
+        &__btn {
+            width: 241.57px;
+            height: 44.06px;
+            border-radius: 21px;           
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24.38px;
+            letter-spacing: -0.02em;   
+            margin-top: 35px;         
+        }
+        &__recovery {
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 15.85px;
+            letter-spacing: -0.02em;    
+            margin-top: 9px;   
         }
     }
 }
