--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -33,4 +33,5 @@ html,body {
 @import '../block/appraisal';
 @import '../block/conditions';
 @import '../block/policy';
+@import '../block/theme';
 @import 'media';
