--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ html, body {
   background: #8c4cec;
 }
 
+#logo-light {
+  display: none;
+}
+
 .about__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -739,25 +743,8 @@ html, body {
   text-align: left;
   color: #FAFAFA;
 }
-.popup__setting.active {
-  visibility: visible;
-  opacity: 1;
-}
-.popup__setting.active .popup__stories-box {
-  scale: 1;
-}
 .popup__setting-main {
   padding: 35.17px 46.76px 64.17px 46.76px;
-}
-.popup__setting-subtitle {
-  font-family: Montserrat;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19.5px;
-  letter-spacing: -0.02em;
-  text-align: left;
-  color: #fff;
-  margin-left: 20px;
 }
 .popup__setting-item--color {
   display: none;
@@ -1432,6 +1419,120 @@ html, body {
   scale: 1;
 }
 
+.theme {
+  background: rgba(15, 12, 21, 0.6588235294);
+  position: fixed;
+  z-index: 22;
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: visibility 0.4s, opacity 0.4s;
+  transition: visibility 0.4s, opacity 0.4s;
+}
+.theme__box {
+  background: rgba(53, 49, 48, 0.9098039216);
+  width: 500px;
+  height: 560px;
+  border-radius: 32px;
+  scale: 0;
+  -webkit-transition: scale 0.6s;
+  transition: scale 0.6s;
+}
+.theme__header {
+  background: rgba(34, 32, 33, 0.9294117647);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 32px 32px 0 0;
+  padding: 15.66px 0 15.66px 32.05px;
+  gap: 64.15px;
+}
+.theme__back {
+  width: 60.56px;
+  height: 38.61px;
+  border-radius: 8px;
+}
+.theme__back img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
+}
+.theme__title {
+  font-family: Montserrat;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 39.01px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #FAFAFA;
+}
+.theme__main {
+  padding: 27.5px 31.5px;
+  margin-top: 27px;
+}
+.theme__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 421.4px;
+  height: 43.77px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 2px;
+  background-color: #222021;
+  padding: 11px 10px;
+  border-radius: 20px 20px 0 0;
+}
+.theme__item:last-child {
+  margin-top: 3px;
+  border-radius: 0 0 20px 20px;
+}
+.theme__item-text {
+  font-family: Montserrat;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24.38px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #fff;
+  margin-left: -50px;
+}
+.theme__item-border {
+  width: 27.5px;
+  height: 27.5px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  margin-left: 200px;
+  padding: 4px;
+  cursor: pointer;
+}
+.theme__item-border.active {
+  background: #fff;
+}
+.theme.active {
+  visibility: visible;
+  opacity: 1;
+}
+.theme.active .theme__box {
+  scale: 1;
+}
+
 @media (max-width: 1250px) {
   .body__container {
     height: 1004px;
@@ -1665,6 +1766,9 @@ html, body {
   .header {
     padding: 15px 0;
     background-color: #222021;
+  }
+  .header__logo-text {
+    text-shadow: none;
   }
   .about {
     padding: 12px;
@@ -1999,6 +2103,8 @@ html, body {
   }
   .header__logo-text {
     font-size: 16px;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   .header__logo-img {
     width: 8px;
@@ -2350,5 +2456,44 @@ html, body {
     line-height: 15.85px;
     letter-spacing: -0.02em;
     margin-top: 9px;
+  }
+  .theme__box {
+    width: 360px;
+    height: 100vh;
+    background: #353130;
+    border-radius: 0;
+  }
+  .theme__header {
+    border-radius: 0;
+    gap: 66px;
+    padding: 20px 35px;
+  }
+  .theme__back {
+    width: 20px;
+    height: 20px;
+  }
+  .theme__back img {
+    width: 100%;
+    height: 100%;
+  }
+  .theme__title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24.38px;
+    letter-spacing: -0.02em;
+    text-align: left;
+  }
+  .theme__main {
+    padding: 27px 19px;
+  }
+  .theme__item {
+    width: 321.4px;
+    height: 43.77px;
+  }
+  .theme__item-text {
+    margin-left: 2px;
+  }
+  .theme__item-border {
+    margin-left: 150px;
   }
 }
