--- a/scss/block/_setting.scss
+++ b/scss/block/_setting.scss
@@ -45,26 +45,26 @@
         text-align: left;
         color: #FAFAFA;
     }
-    &.active {
-        visibility: visible;
-        opacity: 1;
-        .popup__stories-box {
-            scale: 1;
-        }
-    }
+    // &.active {
+    //     visibility: visible;
+    //     opacity: 1;
+    //     .popup__stories-box {
+    //         scale: 1;
+    //     }
+    // }
     &-main {
         padding: 35.17px 46.76px 64.17px 46.76px;
     }
-    &-subtitle {
-        font-family: Montserrat;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19.5px;
-        letter-spacing: -0.02em;
-        text-align: left;
-        color: #fff;      
-        margin-left: 20px;  
-    }
+    // &-subtitle {
+    //     font-family: Montserrat;
+    //     font-size: 16px;
+    //     font-weight: 500;
+    //     line-height: 19.5px;
+    //     letter-spacing: -0.02em;
+    //     text-align: left;
+    //     color: #fff;      
+    //     margin-left: 20px;  
+    // }
     &-item--color {
         display: none;
         border-radius: 0 0 20px 20px;
